[JVMCI] fix management of nmethod::_installed_code field

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b96

      nmethod::_installed_code maintains a link to the InstalledCode instance associated with an nmethod and will be cleared out once the InstalledCode reference is dead or when the nmethod becomes a zombie. Since G1 tracks which nmethods have references into a region, special care must be take when updating this field to avoid crashes.

            Assignee:
            Tom Rodriguez
            Reporter:
            Tom Rodriguez
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: