8142436: [JVMCI] fix management of nmethod::_installed_code field

Reviewed-by: twisti